--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-## HelloWorld.py ##
-str = "! Hello World !"
-print("\n"+str)
-
-
-str = "! test test !"
-print("\n"+str)
-
-str = "! comment test test tourner !"
-print("\n"+str)
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HelloWold</title>
+</head>
+<body>
+    <div>
+        <span>
+            <h2>Hello World</h2>
+        </span>
+    </div>
+</body>
+</html>
